--- a/frontend-client/chess-game-client/public/chessoffline/board.css
+++ b/frontend-client/chess-game-client/public/chessoffline/board.css
@@ -55,7 +55,7 @@ nav a:hover {
 
 /* ----- Bàn cờ ----- */
 #board {
-    background: url("board.png");
+    background: url("board.svg");
     background-size: 500px 550px;
     height: 550px;
     width: 500px;
@@ -149,11 +149,11 @@ nav a:hover {
 
 /* ----- Quân cờ và ô bàn cờ ----- */
 .board_space {
-    width: 21px;
-    height: 19px;
+    width: 33px;
+    height: 29px;
     padding: 5px;
     float: right;
-    margin: 18px 17px;
+    margin: 13px 11px;
     position: relative; /* Tạo bối cảnh cho phần tử con */
     z-index: 10; /* Đảm bảo .board_space nằm trên */
 }
@@ -171,7 +171,7 @@ nav a:hover {
 }
 
 .valid_move:hover {
-    background-color: rgb(255, 188, 140);
+    background-color: rgb(255, 247, 0);
     
 }
 
